[package]
name = "ratatui-fx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
rand = "0.9.0-alpha.2"
rand_seeder = "0.3.0"
rand_pcg = "0.3.1"
rand_chacha = "0.3.1"
